Исправлена часть недочетов

--- a/index.html
+++ b/index.html
@@ -68,45 +68,25 @@
           <!--тег спрятан-->
           <ul class="advantages-list list">
             <li class="advantages-item">
-              <div class="advantaes-thumb">
-                <svg class="advantages-img" width="70" height="70">
-                  <use href="./images/sprite.svg#icon-antenna-1"></use>
-                </svg>
-              </div>
-              <h3 class="advantage-title subtitle">Внимание к деталям</h3>
+              <h3 class="advantage-title antena subtitle">Внимание к деталям</h3>
               <p class="advantage-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="advantages-item">
-              <div class="advantaes-thumb">
-                <svg class="advantages-img" width="70" height="70">
-                  <use href="./images/sprite.svg#icon-clock-1"></use>
-                </svg>
-              </div>
-              <h3 class="advantage-title subtitle">Пунктуальность</h3>
+              <h3 class="advantage-title astronaut subtitle">Пунктуальность</h3>
               <p class="advantage-text">
                 Задача организации, в особенностиже рамки и место обучения кадроввлечет за собой.
               </p>
             </li>
             <li class="advantages-item">
-              <div class="advantaes-thumb">
-                <svg class="advantages-img" width="70" height="70">
-                  <use href="./images/sprite.svg#icon-diagram-1"></use>
-                </svg>
-              </div>
-              <h3 class="advantage-title subtitle">Планирование</h3>
+              <h3 class="advantage-title clock subtitle">Планирование</h3>
               <p class="advantage-text">
                 Равным образом консультация сшироким активом в значительнойстепени обуславливает.
               </p>
             </li>
             <li class="advantages-item">
-              <div class="advantaes-thumb">
-                <svg class="advantages-img" width="70" height="70">
-                  <use href="./images/sprite.svg#icon-astronaut-1"></use>
-                </svg>
-              </div>
-              <h3 class="advantage-title subtitle">Современные технологии</h3>
+              <h3 class="advantage-title diagram subtitle">Современные технологии</h3>
               <p class="advantage-text">
                 Значимость этих проблем настолькоочевидна, что реализация плановыхзаданий.
               </p>
