--- a/index.html
+++ b/index.html
@@ -68,24 +68,44 @@
           <!--тег спрятан-->
           <ul class="advantages-list list">
             <li class="advantages-item">
+              <div class="advantaes-thumb">
+                <svg class="advantages-img" width="70" height="70">
+                  <use href="./images/sprite.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="advantage-title antena subtitle">Внимание к деталям</h3>
               <p class="advantage-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantaes-thumb">
+                <svg class="advantages-img" width="70" height="70">
+                  <use href="./images/sprite.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="advantage-title astronaut subtitle">Пунктуальность</h3>
               <p class="advantage-text">
                 Задача организации, в особенностиже рамки и место обучения кадроввлечет за собой.
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantaes-thumb">
+                <svg class="advantages-img" width="70" height="70">
+                  <use href="./images/sprite.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="advantage-title clock subtitle">Планирование</h3>
               <p class="advantage-text">
                 Равным образом консультация сшироким активом в значительнойстепени обуславливает.
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantaes-thumb">
+                <svg class="advantages-img" width="70" height="70">
+                  <use href="./images/sprite.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="advantage-title diagram subtitle">Современные технологии</h3>
               <p class="advantage-text">
                 Значимость этих проблем настолькоочевидна, что реализация плановыхзаданий.
@@ -141,28 +161,37 @@
                 <p class="team-member-position" lang="en">Product Designer</p>
                 <ul class="team-member-list soc-links-list list">
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-instagram-2"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-twitter-1"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-facebook-1"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-linkedin-1"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
             </li>
+
             <li class="team-item">
               <img
                 class="team-member"
@@ -175,24 +204,32 @@
                 <p class="team-member-position" lang="en">Frontend Developer</p>
                 <ul class="team-member-list soc-links-list list">
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-instagram-2"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-twitter-1"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-facebook-1"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-linkedin-1"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -209,24 +246,32 @@
                 <p class="team-member-position" lang="en">Marketing</p>
                 <ul class="team-member-list soc-links-list list">
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-instagram-2"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-twitter-1"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-facebook-1"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-linkedin-1"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -243,24 +288,32 @@
                 <p class="team-member-position" lang="en">UI Designer</p>
                 <ul class="team-member-list soc-links-list list">
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-instagram-2"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-twitter-1"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-facebook-1"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-link-item team-member-item">
-                    <svg class="soc-link team-member-soc-link link" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-linkedin-1"></use>
-                    </svg>
+                    <a class="soc-link link" href="">
+                      <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -308,49 +361,55 @@
     </main>
     <footer class="footer">
       <div class="footer-container container">
-        <ul class="footer-list list">
-          <li class="footer-item">
-            <a class="link logo" href="" lang="en">Web<span style="color: #ffffff">Studio</span></a>
-            <address class="address">
-              <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
-              <ul class="footer-address-list list">
-                <li class="footer-address-item" lang="en">
-                  <a class="link footer-email-address" href="mailto:info@devstudio.com"
-                    >info@devstudio.com</a
-                  >
-                </li>
-                <li class="footer-address-item">
-                  <a class="link footer-phone-number" href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-              </ul>
-            </address>
-          </li>
-          <li class="footer-item">
-            <h3 class="footer-title subtitle"><strong>Присоединяйтесь</strong></h3>
-            <ul class="footer-links-list soc-links-list list">
-              <li class="footer-link-item soc-link-item">
-                <svg class="soc-link footer-soc-link link" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram-2"></use>
-                </svg>
+        <div>
+          <a class="link logo" href="" lang="en">Web<span style="color: #ffffff">Studio</span></a>
+          <address class="address">
+            <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="footer-address-list list">
+              <li class="footer-address-item" lang="en">
+                <a class="link footer-email-address" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
               </li>
-              <li class="footer-link-item soc-link-item">
-                <svg class="soc-link footer-soc-link link" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter-1"></use>
-                </svg>
-              </li>
-              <li class="footer-link-item soc-link-item">
-                <svg class="soc-link footer-soc-link link" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook-1"></use>
-                </svg>
-              </li>
-              <li class="footer-link-item soc-link-item">
-                <svg class="soc-link footer-soc-link link" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin-1"></use>
-                </svg>
+              <li class="footer-address-item">
+                <a class="link footer-phone-number" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
-          </li>
-        </ul>
+          </address>
+        </div>
+        <div class="footer-links">
+          <h3 class="footer-title subtitle"><strong>Присоединяйтесь</strong></h3>
+          <ul class="footer-links-list soc-links-list list">
+            <li class="soc-link-item">
+              <a class="footer-link link soc-link" href="">
+                <svg width="20" height="20">
+                  <use href="./images/sprite.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-link-item">
+              <a class="footer-link link soc-link" href="">
+                <svg width="20" height="20">
+                  <use href="./images/sprite.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-link-item">
+              <a class="footer-link link soc-link" href="">
+                <svg width="20" height="20">
+                  <use href="./images/sprite.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-link-item">
+              <a class="footer-link link soc-link" href="">
+                <svg width="20" height="20">
+                  <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
