Убраны не использующиеся классы

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,8 @@
     <main>
       <section class="examples">
         <div class="examples-container container">
-          <h1 class="main-title examples-title">Примеры работ</h1>
+          <h1 class="main-title visually-hidden">Примеры работ</h1>
+          <!--заголовок спрятан-->
           <ul class="examples-btns-list list">
             <li class="example-btn-item">
               <button class="example-btn" type="button">Все</button>
@@ -79,12 +80,7 @@
           <ul class="examples-links-list list">
             <li class="examples-link-item">
               <a class="link example-link" href="">
-                <img
-                  class="example-img"
-                  width="370"
-                  src="./images/parfolio/img.jpg"
-                  alt="сайт - 'Техноряк'"
-                />
+                <img width="370" src="./images/parfolio/img.jpg" alt="сайт - 'Техноряк'" />
                 <div class="example-description">
                   <h2 class="example-name">Технокряк</h2>
                   <p class="example-type">Веб-сайт</p>
@@ -94,7 +90,6 @@
             <li class="examples-link-item">
               <a class="link example-link" href="">
                 <img
-                  class="example-img"
                   width="370"
                   src="./images/parfolio/img-1.jpg"
                   alt="дизайн постера - 'New Orlean vs Golden Star'"
@@ -110,7 +105,6 @@
             <li class="examples-link-item">
               <a class="link example-link" href="">
                 <img
-                  class="example-img"
                   width="370"
                   src="./images/parfolio/img-2.jpg"
                   alt="приложение - 'Ресторан Seafood'"
@@ -123,12 +117,7 @@
             </li>
             <li class="examples-link-item">
               <a class="link example-link" href="">
-                <img
-                  class="example-img"
-                  width="370"
-                  src="./images/parfolio/img-3.jpg"
-                  alt="проект - 'Prime'"
-                />
+                <img width="370" src="./images/parfolio/img-3.jpg" alt="проект - 'Prime'" />
                 <div class="example-description">
                   <h2 class="example-name">Проект <span lang="en">Prime</span></h2>
                   <p class="example-type">Маркетинг</p>
@@ -137,12 +126,7 @@
             </li>
             <li class="examples-link-item">
               <a class="link example-link" href="">
-                <img
-                  class="example-img"
-                  width="370"
-                  src="./images/parfolio/img-4.jpg"
-                  alt="проект - 'Boxes'"
-                />
+                <img width="370" src="./images/parfolio/img-4.jpg" alt="проект - 'Boxes'" />
                 <div class="example-description">
                   <h2 class="example-name">Проект <span lang="en">Boxes</span></h2>
                   <p class="example-type">Приложение</p>
@@ -152,7 +136,6 @@
             <li class="examples-link-item">
               <a class="link example-link" href="">
                 <img
-                  class="example-img"
                   width="370"
                   src="./images/parfolio/img-5.jpg"
                   alt="сайт - 'Inspiration has no Borders'"
@@ -166,7 +149,6 @@
             <li class="examples-link-item">
               <a class="link example-link" href="">
                 <img
-                  class="example-img"
                   width="370"
                   src="./images/parfolio/img-6.jpg"
                   alt="дизайн - 'Limited Edition'"
@@ -179,12 +161,7 @@
             </li>
             <li class="examples-link-item">
               <a class="link example-link" href="">
-                <img
-                  class="example-img"
-                  width="370"
-                  src="./images/parfolio/img-7.jpg"
-                  alt="проект 'LAB'"
-                />
+                <img width="370" src="./images/parfolio/img-7.jpg" alt="проект 'LAB'" />
                 <div class="example-description">
                   <h2 class="example-name">Проект <span lang="en">LAB</span></h2>
                   <p class="example-type">Маркетинг</p>
@@ -194,7 +171,6 @@
             <li class="examples-link-item">
               <a class="link example-link" href="">
                 <img
-                  class="example-img"
                   width="370"
                   src="./images/parfolio/img-8.jpg"
                   alt="приложение - 'Growing Business'"
