--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
         <ul class="header-address-list list">
           <li class="header-address-item">
-            <a class="header-email-address link" lang="en" href="mailto:info@devstudio.com">
+            <a class="link" lang="en" href="mailto:info@devstudio.com">
               <svg class="header-address-icon" width="16" height="12">
                 <use href="./images/sprite.svg#icon-envelope"></use>
               </svg>
@@ -45,7 +45,7 @@
             >
           </li>
           <li class="header-address-item">
-            <a class="header-phone-number link" href="tel:+380961111111">
+            <a class="link" href="tel:+380961111111">
               <svg class="header-address-icon" width="10" height="16">
                 <use href="./images/sprite.svg#icon-smartphone"></use>
               </svg>
@@ -68,45 +68,45 @@
           <!--тег спрятан-->
           <ul class="advantages-list list">
             <li class="advantages-item">
-              <div class="advantaes-thumb">
+              <div class="advantages-thumb">
                 <svg class="advantages-img" width="70" height="70">
                   <use href="./images/sprite.svg#icon-antenna-1"></use>
                 </svg>
               </div>
-              <h3 class="advantage-title antena subtitle">Внимание к деталям</h3>
+              <h3 class="advantage-title subtitle">Внимание к деталям</h3>
               <p class="advantage-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="advantages-item">
-              <div class="advantaes-thumb">
+              <div class="advantages-thumb">
                 <svg class="advantages-img" width="70" height="70">
                   <use href="./images/sprite.svg#icon-clock-1"></use>
                 </svg>
               </div>
-              <h3 class="advantage-title astronaut subtitle">Пунктуальность</h3>
+              <h3 class="advantage-title subtitle">Пунктуальность</h3>
               <p class="advantage-text">
                 Задача организации, в особенностиже рамки и место обучения кадроввлечет за собой.
               </p>
             </li>
             <li class="advantages-item">
-              <div class="advantaes-thumb">
+              <div class="advantages-thumb">
                 <svg class="advantages-img" width="70" height="70">
                   <use href="./images/sprite.svg#icon-diagram-1"></use>
                 </svg>
               </div>
-              <h3 class="advantage-title clock subtitle">Планирование</h3>
+              <h3 class="advantage-title subtitle">Планирование</h3>
               <p class="advantage-text">
                 Равным образом консультация сшироким активом в значительнойстепени обуславливает.
               </p>
             </li>
             <li class="advantages-item">
-              <div class="advantaes-thumb">
+              <div class="advantages-thumb">
                 <svg class="advantages-img" width="70" height="70">
                   <use href="./images/sprite.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
-              <h3 class="advantage-title diagram subtitle">Современные технологии</h3>
+              <h3 class="advantage-title subtitle">Современные технологии</h3>
               <p class="advantage-text">
                 Значимость этих проблем настолькоочевидна, что реализация плановыхзаданий.
               </p>
@@ -116,31 +116,16 @@
       </section>
       <section class="services indent-section">
         <div class="container services-container">
-          <h2 class="title services-title">Чем мы занимаемся</h2>
+          <h2 class="title">Чем мы занимаемся</h2>
           <ul class="services-list list">
             <li class="service-item">
-              <img
-                class="service-img"
-                width="370"
-                src="./images/index/services/img.jpg"
-                alt="компьютер"
-              />
+              <img width="370" src="./images/index/services/img.jpg" alt="компьютер" />
             </li>
             <li class="service-item">
-              <img
-                class="service-img"
-                width="370"
-                src="./images/index/services/img-1.jpg"
-                alt="телефон"
-              />
+              <img width="370" src="./images/index/services/img-1.jpg" alt="телефон" />
             </li>
             <li class="service-item">
-              <img
-                class="service-img"
-                width="370"
-                src="./images/index/services/img-2.jpg"
-                alt="подбор цвета"
-              />
+              <img width="370" src="./images/index/services/img-2.jpg" alt="подбор цвета" />
             </li>
           </ul>
         </div>
@@ -150,12 +135,7 @@
           <h2 class="title">Наша команда</h2>
           <ul class="team-list list">
             <li class="team-item">
-              <img
-                class="team-member"
-                width="270"
-                src="./images/index/team/people/img.jpg"
-                alt="мужчина"
-              />
+              <img width="270" src="./images/index/team/people/img.jpg" alt="мужчина" />
               <div class="team-member-description">
                 <h3 class="team-member-name subtitle">Игорь Демьяненко</h3>
                 <p class="team-member-position" lang="en">Product Designer</p>
@@ -193,12 +173,7 @@
             </li>
 
             <li class="team-item">
-              <img
-                class="team-member"
-                width="270"
-                src="./images/index/team/people/img-1.jpg"
-                alt="женщина"
-              />
+              <img width="270" src="./images/index/team/people/img-1.jpg" alt="женщина" />
               <div class="team-member-description">
                 <h3 class="team-member-name subtitle">Ольга Репина</h3>
                 <p class="team-member-position" lang="en">Frontend Developer</p>
@@ -235,12 +210,7 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                class="team-member"
-                width="270"
-                src="./images/index/team/people/img-2.jpg"
-                alt="мужчина"
-              />
+              <img width="270" src="./images/index/team/people/img-2.jpg" alt="мужчина" />
               <div class="team-member-description">
                 <h3 class="team-member-name subtitle">Николай Тарасов</h3>
                 <p class="team-member-position" lang="en">Marketing</p>
@@ -277,12 +247,7 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                class="team-member"
-                width="270"
-                src="./images/index/team/people/img-3.jpg"
-                alt="мужчина"
-              />
+              <img width="270" src="./images/index/team/people/img-3.jpg" alt="мужчина" />
               <div class="team-member-description">
                 <h3 class="team-member-name subtitle">Михаил Ермаков</h3>
                 <p class="team-member-position" lang="en">UI Designer</p>
@@ -323,35 +288,35 @@
       </section>
       <section class="customers indent-section">
         <div class="customers-container container">
-          <h2 class="customers-title title">Постоянные клиенты</h2>
+          <h2 class="title">Постоянные клиенты</h2>
           <ul class="customers-list list">
             <li class="customers-item">
-              <svg class="customers-img" width="106" height="60">
+              <svg  width="106" height="60">
                 <use href="./images/sprite.svg#icon-Logo"></use>
               </svg>
             </li>
             <li class="customers-item">
-              <svg class="customers-img" width="106" height="60">
+              <svg  width="106" height="60">
                 <use href="./images/sprite.svg#icon-Logo-1"></use>
               </svg>
             </li>
             <li class="customers-item">
-              <svg class="customers-img" width="106" height="60">
+              <svg  width="106" height="60">
                 <use href="./images/sprite.svg#icon-Logo-2"></use>
               </svg>
             </li>
             <li class="customers-item">
-              <svg class="customers-img" width="106" height="60">
+              <svg  width="106" height="60">
                 <use href="./images/sprite.svg#icon-Logo-3"></use>
               </svg>
             </li>
             <li class="customers-item">
-              <svg class="customers-img" width="106" height="60">
+              <svg  width="106" height="60">
                 <use href="./images/sprite.svg#icon-Logo-4"></use>
               </svg>
             </li>
             <li class="customers-item">
-              <svg class="customers-img" width="106" height="60">
+              <svg  width="106" height="60">
                 <use href="./images/sprite.svg#icon-Logo-5"></use>
               </svg>
             </li>
