--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
         </nav>
         <ul class="header-address-list list">
           <li class="header-address-item">
-            <a class="header-email-address link" lang="en" href="mailto:info@devstudio.com">
+            <a class="link" lang="en" href="mailto:info@devstudio.com">
               <svg class="header-address-icon" width="16" height="12">
                 <use href="./images/sprite.svg#icon-envelope"></use>
               </svg>
@@ -45,7 +45,7 @@
             >
           </li>
           <li class="header-address-item">
-            <a class="header-phone-number link" href="tel:+380961111111">
+            <a class="link" href="tel:+380961111111">
               <svg class="header-address-icon" width="10" height="16">
                 <use href="./images/sprite.svg#icon-smartphone"></use>
               </svg>
