--- a/portfolio.html
+++ b/portfolio.html
@@ -187,49 +187,55 @@
     </main>
     <footer class="footer">
       <div class="footer-container container">
-        <ul class="footer-list list">
-          <li class="footer-item">
-            <a class="link logo" href="" lang="en">Web<span style="color: #ffffff">Studio</span></a>
-            <address class="address">
-              <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
-              <ul class="footer-address-list list">
-                <li class="footer-address-item" lang="en">
-                  <a class="link footer-email-address" href="mailto:info@devstudio.com"
-                    >info@devstudio.com</a
-                  >
-                </li>
-                <li class="footer-address-item">
-                  <a class="link footer-phone-number" href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-              </ul>
-            </address>
-          </li>
-          <li class="footer-item">
-            <h3 class="footer-title subtitle"><strong>Присоединяйтесь</strong></h3>
-            <ul class="footer-links-list soc-links-list list">
-              <li class="footer-link-item soc-link-item">
-                <svg class="soc-link footer-soc-link link" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram-2"></use>
-                </svg>
+        <div>
+          <a class="link logo" href="" lang="en">Web<span style="color: #ffffff">Studio</span></a>
+          <address class="address">
+            <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="footer-address-list list">
+              <li class="footer-address-item" lang="en">
+                <a class="link footer-email-address" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
               </li>
-              <li class="footer-link-item soc-link-item">
-                <svg class="soc-link footer-soc-link link" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter-1"></use>
-                </svg>
-              </li>
-              <li class="footer-link-item soc-link-item">
-                <svg class="soc-link footer-soc-link link" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook-1"></use>
-                </svg>
-              </li>
-              <li class="footer-link-item soc-link-item">
-                <svg class="soc-link footer-soc-link link" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin-1"></use>
-                </svg>
+              <li class="footer-address-item">
+                <a class="link footer-phone-number" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
-          </li>
-        </ul>
+          </address>
+        </div>
+        <div class="footer-links">
+          <h3 class="footer-title subtitle"><strong>Присоединяйтесь</strong></h3>
+          <ul class="footer-links-list soc-links-list list">
+            <li class="soc-link-item">
+              <a class="footer-link link soc-link" href="">
+                <svg width="20" height="20">
+                  <use href="./images/sprite.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-link-item">
+              <a class="footer-link link soc-link" href="">
+                <svg width="20" height="20">
+                  <use href="./images/sprite.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-link-item">
+              <a class="footer-link link soc-link" href="">
+                <svg width="20" height="20">
+                  <use href="./images/sprite.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-link-item">
+              <a class="footer-link link soc-link" href="">
+                <svg width="20" height="20">
+                  <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
