--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <div class="team-member-description">
                 <h3 class="team-member-name">Игорь Демьяненко</h3>
                 <p class="team-member-position" lang="en">Product Designer</p>
-                <ul class="team-member-list soc-links-list list">
+                <ul class="soc-links-list list">
                   <li class="soc-link-item">
                     <a
                       class="soc-link link"
@@ -194,7 +194,7 @@
               <div class="team-member-description">
                 <h3 class="team-member-name">Ольга Репина</h3>
                 <p class="team-member-position" lang="en">Frontend Developer</p>
-                <ul class="team-member-list soc-links-list list">
+                <ul class="soc-links-list list">
                   <li class="soc-link-item">
                     <a
                       class="soc-link link"
@@ -251,7 +251,7 @@
               <div class="team-member-description">
                 <h3 class="team-member-name">Николай Тарасов</h3>
                 <p class="team-member-position" lang="en">Marketing</p>
-                <ul class="team-member-list soc-links-list list">
+                <ul class="soc-links-list list">
                   <li class="soc-link-item">
                     <a
                       class="soc-link link"
@@ -308,7 +308,7 @@
               <div class="team-member-description">
                 <h3 class="team-member-name">Михаил Ермаков</h3>
                 <p class="team-member-position" lang="en">UI Designer</p>
-                <ul class="team-member-list soc-links-list list">
+                <ul class="soc-links-list list">
                   <li class="soc-link-item">
                     <a
                       class="soc-link link"
@@ -471,7 +471,7 @@
           </address>
         </div>
         <div class="footer-item footer-links">
-          <h3 class="footer-title"><strong>Присоединяйтесь</strong></h3>
+          <h3 class="footer-title">Присоединяйтесь</h3>
           <ul class="soc-links-list list">
             <li class="soc-link-item">
               <a
